--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -2,11 +2,31 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	
 	<title>coursera module 2 solution</title>
-	<link rel="stylesheet" href="index.css">
-</head>
+	<link rel="stylesheet" href="css\index.css">
+</head>	
 <body>
-	<h1>Hello Coursera !</h1>
+	
+<div class="head1">
+		<span>Our Menu</span>
+</div>
+
+	<div class = "row">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="header"> Chicken </div>
+				<p>                                                                                                                
+				orders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region th
+				</p>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="header1"> Beef</div>
+				<p>orders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region th</p>
+		</div>
+		<div class="col-lg-4 col-md-12">
+			<div class="header2"> Sushi </div>
+				<p>orders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region th</p>
+		</div>
+	</div>
+
 </body>
-</html>
